fix window portal

--- a/projects/icc/theme/src/_typography.scss
+++ b/projects/icc/theme/src/_typography.scss
@@ -17,7 +17,7 @@ icc-layout,
 
 .cdk-overlay-pane {
   display: block;
-  height: auto !important;
+  //height: auto !important;
 }
 
 .cdk-visually-hidden {
