--- a/projects/icc/theme/src/_theming.scss
+++ b/projects/icc/theme/src/_theming.scss
@@ -1,5 +1,10 @@
 @use "sass:map";
 
+@use "core/common";
+@use "core/variables";
+@use "reset";
+@use "typography";
+
 $icc-enable-css-custom-properties: false !default;
 
 $icc-themes: ();
@@ -16,10 +21,6 @@ html {
   border: 0;
 }
 
-@import "core/common";
 @import "core/functions";
-@import "core/variables";
 @import "components";
-@import "reset";
-@import "typography";
 @import "themes";
