--- a/projects/icc/theme/src/_theming.scss
+++ b/projects/icc/theme/src/_theming.scss
@@ -1,10 +1,5 @@
 @use "sass:map";
 
-@use "core/common";
-@use "core/variables";
-@use "reset";
-@use "typography";
-
 $icc-enable-css-custom-properties: false !default;
 
 $icc-themes: ();
@@ -21,6 +16,10 @@ html {
   border: 0;
 }
 
+@import "core/common";
+@import "core/variables";
+@import "reset";
+@import "typography";
 @import "core/functions";
 @import "components";
 @import "themes";
