--- a/projects/icc/dashboard/src/dashboard.component.scss
+++ b/projects/icc/dashboard/src/dashboard.component.scss
@@ -29,6 +29,7 @@
     // this keep in the same row cdkDropListOrientation="horizontal" seems not working
     display: flex;
     flex-direction: row;
+    padding-bottom: 1px;
 
     icc-portal {
       display: flex;
