--- a/projects/icc/checkbox/src/_checkbox.component.theme.scss
+++ b/projects/icc/checkbox/src/_checkbox.component.theme.scss
@@ -1,19 +1,21 @@
+@use "../../theme/src/new/functions" as icc;
+
 @mixin icc-checkbox-theme() {
   icc-checkbox.ghost-checkbox {
     .icc-checkbox-container {
       border: none;
-      background: icc-theme(checkmark-background-color);
+      background: icc.icc-theme(checkmark-background-color);
 
       icc-icon {
-        color: icc-theme(checkmark-color);
+        color: icc.icc-theme(checkmark-color);
       }
     }
 
     input:checked + .icc-checkbox-container {
-      background-color: icc-theme(checkmark-checked-background-color);
+      background-color: icc.icc-theme(checkmark-checked-background-color);
 
       icc-icon {
-        color: icc-theme(checkmark-checked-color);
+        color: icc.icc-theme(checkmark-checked-color);
       }
     }
 
@@ -25,16 +27,16 @@
   icc-checkbox {
     .icc-checkbox-container {
       border: 1px solid;
-      border-color: icc-theme(checkbox-border-color);
+      border-color: icc.icc-theme(checkbox-border-color);
       border-radius: 3px;
       min-width: 1rem;
       width: 1rem;
       height: 1rem;
-      background: icc-theme(checkbox-background-color);
+      background: icc.icc-theme(checkbox-background-color);
       position: relative;
 
       icc-icon {
-        color: icc-theme(checkbox-checkmark-color);
+        color: icc.icc-theme(checkbox-checkmark-color);
       }
     }
 
@@ -49,23 +51,23 @@
       width: 1rem;
       height: 1rem;*/
       icc-icon {
-        color: icc-theme(checkbox-checked-checkmark-color);
+        color: icc.icc-theme(checkbox-checked-checkmark-color);
       }
     }
 
     input:hover + .icc-checkbox-container,
     input:focus + .icc-checkbox-container {
-      border-color: icc-theme(checkbox-hover-border-color);
+      border-color: icc.icc-theme(checkbox-hover-border-color);
     }
 
     input:disabled + .icc-checkbox-container {
-      border-color: icc-theme(checkbox-disabled-border-color);
-      background: icc-theme(checkbox-disabled-background-color);
+      border-color: icc.icc-theme(checkbox-disabled-border-color);
+      background: icc.icc-theme(checkbox-disabled-background-color);
       icc-icon {
-        color: icc-theme(checkbox-checkmark-color);
+        color: icc.icc-theme(checkbox-checkmark-color);
         cursor: default;
         &.checked {
-          color: icc-theme(checkbox-disabled-checkmark-color);
+          color: icc.icc-theme(checkbox-disabled-checkmark-color);
         }
       }
     }
