--- a/projects/icc/dashboard/src/_dashboard.component.theme.scss
+++ b/projects/icc/dashboard/src/_dashboard.component.theme.scss
@@ -1,6 +1,8 @@
+@use "../../theme/src/new/functions" as icc;
+
 @mixin icc-dashboard-theme() {
   icc-dashboard,
   .icc-tile-item {
-    border: solid 1px icc-theme(app-border-basic-color);
+    border: solid 1px icc.icc-theme(app-border-basic-color);
   }
 }
