--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -1,20 +1,22 @@
+@use "../../theme/src/new/functions" as icc;
+
 @mixin icc-form-field-theme() {
   .icc-form-field-container {
-    background-color: icc-theme(icc-form-field-input-background-color);
-    color: icc-theme(app-text-basic-color);
-    border-bottom: 1px solid icc-theme(app-border-basic-color);
+    background-color: icc.icc-theme(icc-form-field-input-background-color);
+    color: icc.icc-theme(app-text-basic-color);
+    border-bottom: 1px solid icc.icc-theme(app-border-basic-color);
 
     :focus,
     :hover {
       outline: none;
-      background-color: icc-theme(icc-form-field-focus-background-color);
-      border-color: icc-theme(icc-form-field-focus-border-color);
+      background-color: icc.icc-theme(icc-form-field-focus-background-color);
+      border-color: icc.icc-theme(icc-form-field-focus-border-color);
     }
 
     .icc-form-field-suffix-focus {
       outline: none;
-      background-color: icc-theme(icc-form-field-focus-background-color);
-      border-color: icc-theme(icc-form-field-focus-border-color);
+      background-color: icc.icc-theme(icc-form-field-focus-background-color);
+      border-color: icc.icc-theme(icc-form-field-focus-border-color);
     }
   }
 
@@ -43,13 +45,13 @@
     height: 1.75rem;
     border: none;
     background-color: transparent;
-    color: icc-theme(app-text-basic-color);
+    color: icc.icc-theme(app-text-basic-color);
   }
 
   textarea[iccInput] {
     display: block;
     height: 3.5rem;
-    border: 1px solid icc-theme(app-border-basic-color);
+    border: 1px solid icc.icc-theme(app-border-basic-color);
     padding: 0.375rem;
     line-height: 0.9375rem;
   }
@@ -66,6 +68,6 @@
   }
 
   legend {
-    border-bottom: 1px solid icc-theme(app-border-basic-color);
+    border-bottom: 1px solid icc.icc-theme(app-border-basic-color);
   }
 }
