--- a/projects/icc/layout/src/_layout.component.theme.scss
+++ b/projects/icc/layout/src/_layout.component.theme.scss
@@ -1,3 +1,5 @@
+@use "../../theme/src/new/functions" as icc;
+
 @mixin icc-layout-theme() {
   .icc-main-viewport-layout {
     icc-layout-header {
@@ -9,7 +11,7 @@
     }
     icc-layout-footer {
       height: 24px;
-      border-color: icc-theme(app-border-basic-color);
+      border-color: icc.icc-theme(app-border-basic-color);
       border-bottom-width: 1px;
       border-style: solid;
     }
@@ -35,13 +37,13 @@
   icc-layout-left,
   icc-layout-right {
     background-color: var(--app-background-color);
-    color: icc-theme(app-text-basic-color);
+    color: icc.icc-theme(app-text-basic-color);
   }
 
   icc-layout-header,
   icc-layout-footer {
-    background-color: icc-theme(icc-header-background-color);
-    color: icc-theme(app-text-basic-color);
+    background-color: icc.icc-theme(icc-header-background-color);
+    color: icc.icc-theme(app-text-basic-color);
   }
 
   .icc-layout-header-title {
