--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -1,36 +1,27 @@
-@import "../../layout/src/layout.component.theme";
-@import "../../grid/src/grid.component.theme";
-@import "../../menu/src/menu.component.theme";
-@import "../../accordion/src/accordion.component.theme";
-@import "../../option//src/option.component.theme";
-@import "../../form-field/src/form-field.component.theme";
-@import "../../checkbox/src/checkbox.component.theme";
-@import "../../radio/src/radio.component.theme";
-@import "../../button/src/button.component.theme";
-
-@import "../../resize/src/resize.directive.theme";
-@import "../../dashboard/src/dashboard.component.theme";
-
-@import "../../calendar/src/calendar.component.theme";
-@import "../../calendar/src/weekdays/weekdays.component.theme";
-@import "../../calendar/src/month/month.component.theme";
-@import "../../calendar/src/month-header/month-header.component.theme";
+@use "../../layout/src/layout.component.theme" as layout;
+@use "../../grid/src/grid.component.theme" as grid;
+@use "../../menu/src/menu.component.theme" as menu;
+@use "../../accordion/src/accordion.component.theme" as accordion;
+@use "../../option//src/option.component.theme" as option;
+@use "../../form-field/src/form-field.component.theme" as formfield;
+@use "../../checkbox/src/checkbox.component.theme" as checkbox;
+@use "../../radio/src/radio.component.theme" as radio;
+@use "../../button/src/button.component.theme" as button;
+@use "../../resize/src/resize.directive.theme" as resize;
+@use "../../dashboard/src/dashboard.component.theme" as dashboard;
+@use "../../calendar/src/calendar.component.theme" as calendar;
 
 @mixin icc-theme-components() {
-  @include icc-layout-theme();
-  @include icc-grid-theme();
-  @include icc-menu-theme();
-  @include icc-accordion-theme();
-  @include icc-option-theme();
-  @include icc-form-field-theme();
-  @include icc-checkbox-theme();
-  @include icc-radio-theme();
-  @include icc-button-theme();
-  @include icc-resize-directive-theme();
-  @include icc-dashboard-theme();
-
-  @include icc-calendar-theme();
-  @include icc-calendar-weekdays-theme();
-  @include icc-calendar-month-theme();
-  @include icc-calendar-month-header-theme();
+  @include layout.icc-layout-theme();
+  @include grid.icc-grid-theme();
+  @include menu.icc-menu-theme();
+  @include accordion.icc-accordion-theme();
+  @include option.icc-option-theme();
+  @include formfield.icc-form-field-theme();
+  @include checkbox.icc-checkbox-theme();
+  @include radio.icc-radio-theme();
+  @include button.icc-button-theme();
+  @include resize.icc-resize-directive-theme();
+  @include dashboard.icc-dashboard-theme();
+  @include calendar.icc-calendar-theme();
 }
