--- a/projects/icc/theme/src/_themes.scss
+++ b/projects/icc/theme/src/_themes.scss
@@ -1,2 +1,15 @@
-@import "themes/light";
-@import "themes/dark";
+@use "./themes/light" as light;
+@use "./themes/dark" as dark;
+@use "./core/register" as register;
+
+$icc-enable-css-custom-properties: false !default;
+
+$icc-themes: ();
+
+$icc-processed-theme: ();
+
+$icc-themes: register.icc-register-theme($icc-themes, light.$theme, light);
+
+$icc-themes: register.icc-register-theme($icc-themes, dark.$theme, dark);
+
+$icc-processed-theme: register.icc-process-themes($icc-themes);
