--- a/projects/icc/theme/src/old/themes/_dark.scss
+++ b/projects/icc/theme/src/old/themes/_dark.scss
@@ -70,4 +70,4 @@ $theme: (
   radio-text-color: #adadad,
 );
 
-//$icc-themes: icc-register-theme($theme, dark);
+$icc-themes: icc-register-theme($theme, dark);
