--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -70,4 +70,4 @@ $theme: (
   radio-text-color: #4b4f54,
 );
 
-$icc-themes: icc-register-theme($theme, light);
+//$icc-themes: icc-register-theme($theme, light);
