--- a/projects/icc/theme/src/core/_typography.scss
+++ b/projects/icc/theme/src/core/_typography.scss
@@ -1,3 +1,14 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  border: 0;
+}
+
 body {
   margin: 0px;
 }
