--- a/projects/icc/theme/src/themes/_dark.scss
+++ b/projects/icc/theme/src/themes/_dark.scss
@@ -1,3 +1,5 @@
+@use "../core/functions" as icc;
+
 $theme: (
   --app-background-color: hsl(0, 0%, 0%),
   app-border-basic-color: #4b4f54,
@@ -70,4 +72,4 @@ $theme: (
   radio-text-color: #adadad,
 );
 
-//$icc-themes: icc-register-theme($theme, dark);
+$icc-themes: icc.icc-register-theme($theme, dark);
