--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -1,3 +1,5 @@
+@use "../core/functions" as icc;
+
 $theme: (
   --app-background-color: hsl(0, 0%, 100%),
   app-border-basic-color: #d0c6bc,
@@ -70,4 +72,4 @@ $theme: (
   radio-text-color: #4b4f54,
 );
 
-//$icc-themes: icc-register-theme($theme, light);
+$icc-themes: icc.icc-register-theme($theme, light);
