--- a/projects/icc/theme/src/_theming.scss
+++ b/projects/icc/theme/src/_theming.scss
@@ -1,6 +1,21 @@
 @use "./theme";
 @use "./icc";
 
+@mixin icc-theme-components() {
+  @include icc.icc-layout-theme();
+  @include icc.icc-grid-theme();
+  @include icc.icc-menu-theme();
+  @include icc.icc-accordion-theme();
+  @include icc.icc-option-theme();
+  @include icc.icc-form-field-theme();
+  @include icc.icc-checkbox-theme();
+  @include icc.icc-radio-theme();
+  @include icc.icc-button-theme();
+  @include icc.icc-resize-directive-theme();
+  @include icc.icc-dashboard-theme();
+  @include icc.icc-calendar-theme();
+}
+
 @include icc.icc-install() {
-  @include icc.icc-theme-components();
+  @include icc-theme-components();
 }
