--- a/projects/icc/theme/src/_components.scss
+++ b/projects/icc/theme/src/_components.scss
@@ -1,3 +1,5 @@
+@forward "./core/functions";
+
 @forward "../../layout/src/layout.component.theme";
 @forward "../../grid/src/grid.component.theme";
 @forward "../../menu/src/menu.component.theme";
