--- a/projects/icc/checkbox/src/_checkbox.component.theme.scss
+++ b/projects/icc/checkbox/src/_checkbox.component.theme.scss
@@ -1,4 +1,4 @@
-@use "../../theme/src/core/functions" as icc;
+@use "../../theme/src/icc";
 
 @mixin icc-checkbox-theme() {
   icc-checkbox.ghost-checkbox {
