--- a/projects/icc/button/src/button.component.scss
+++ b/projects/icc/button/src/button.component.scss
@@ -13,7 +13,8 @@
   &:hover,
   &:focus {
     text-decoration: none;
-    border: 1px solid orangered;
+    font-weight: bold;
+    //border: 1px solid orangered;
   }
 
   &[disabled] {
