--- a/projects/icc-demo/src/styles.scss
+++ b/projects/icc-demo/src/styles.scss
@@ -1,1 +1,9 @@
-@use "../../icc/theme/src/theming";
+// use local src theming sass
+@use "../../icc/theme/src/theming" as icc;
+
+// use sass bundle cp sass in the dist
+//@use "../../../dist/icc/theme/src/theming" as icc;
+
+@include icc.icc-install() {
+  @include icc.icc-theme-components();
+}
