ng package theme

--- a/projects/icc-demo/src/styles.scss
+++ b/projects/icc-demo/src/styles.scss
@@ -1,7 +1,7 @@
-// use local src theming sass
+// use local src theming sass when dev
 @use "../../icc/theme/src/theming" as icc;
 
-// use sass bundle cp sass in the dist
+// use ng build icc or sass bundle cp sass in the dist
 //@use "../../../dist/icc/theme/src/theming" as icc;
 
 @include icc.icc-install() {
