fix grid horizontal scroll odd even row styles

--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -32,6 +32,7 @@
       <ng-container *ngIf="rowSelection$ | async as selection">
         <icc-grid-row
           *ngIf="!isRowGroup(index, record)"
+          [ngStyle]="{ width: tableWidth + 'px' }"
           [gridConfig]="gridConfig"
           [rowIndex]="index"
           [columns]="columns"
