--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -21,6 +21,7 @@
         (change)="onChange($event)"
         [iccAutocomplete]="autocomplete"
         [iccAutocompleteClose]="autocompleteClose"
+        [iccAutocompleteClickOption]="clickedOption"
         [required]="required"
         placeholder="{{ fieldConfig.placeholder! | translate }}"
       />
@@ -44,9 +45,56 @@
         [compareWith]="compareFn.bind(this)"
       >
         <ng-template iccAutocompleteContent>
+          <ng-container *ngIf="selectOptions | filter: selectedField.value : fieldConfig.optionLabel as result">
+            <ng-container *ngIf="!fieldConfig.virtualScroll">
+              <icc-option *ngFor="let option of result" [value]="option" #ref>
+                <icc-checkbox *ngIf="fieldConfig.multiSelection" [checked]="ref.selected">
+                  <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
+                  </icc-filter-highlight>
+                </icc-checkbox>
+                <ng-container *ngIf="!fieldConfig.multiSelection">
+                  <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
+                  </icc-filter-highlight>
+                </ng-container>
+              </icc-option>
+              <icc-option class="no-result" *ngIf="!result.length">{{
+                "ICC.UI.LIST.NO_RESULT" | translate
+              }}</icc-option>
+            </ng-container>
+
+            <ng-container *ngIf="fieldConfig.virtualScroll">
+              <cdk-virtual-scroll-viewport class="icc-select-virtual-scroll" [itemSize]="28">
+                <icc-option *cdkVirtualFor="let option of result" [value]="option" #ref (click)="clickOption(ref)">
+                  <icc-checkbox *ngIf="fieldConfig.multiSelection" [checked]="ref.selected">
+                    <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
+                    </icc-filter-highlight>
+                  </icc-checkbox>
+                  <ng-container *ngIf="!fieldConfig.multiSelection">
+                    <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
+                    </icc-filter-highlight>
+                  </ng-container>
+                </icc-option>
+              </cdk-virtual-scroll-viewport>
+              <icc-option class="no-result" *ngIf="!result.length">{{
+                "ICC.UI.LIST.NO_RESULT" | translate
+              }}</icc-option>
+            </ng-container>
+          </ng-container>
+        </ng-template>
+      </icc-autocomplete>
+
+      <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
+        <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+      </icc-form-field-errors>
+    </icc-form-field>
+  </ng-container>
+</ng-container>
+
+<!--
+
           <cdk-virtual-scroll-viewport class="icc-select-virtual-scroll" [itemSize]="28">
             <ng-container *ngIf="selectOptions | filter: selectedField.value : fieldConfig.optionLabel as result">
-              <icc-option *cdkVirtualFor="let option of result" [value]="option" #ref>
+              <icc-option *cdkVirtualFor="let option of result" [value]="option" #ref (click)="clickOption(ref)">
                 <icc-checkbox *ngIf="fieldConfig.multiSelection" [checked]="ref.selected">
                   <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
                   </icc-filter-highlight>
@@ -61,29 +109,6 @@
               }}</icc-option>
             </ng-container>
           </cdk-virtual-scroll-viewport>
-        </ng-template>
-      </icc-autocomplete>
 
-      <icc-form-field-errors *ngIf="(field?.touched || field?.dirty) && field?.errors">
-        <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-      </icc-form-field-errors>
-    </icc-form-field>
-  </ng-container>
-</ng-container>
 
-<!--
-<cdk-virtual-scroll-viewport
-  [itemSize]="gridConfig.rowHeight"
-  [ngStyle]="{
-    'overflow-x': gridConfig.horizontalScroll ? 'auto' : 'hidden',
-    'overflow-y': gridConfig.virtualScroll || gridConfig.verticalScroll ? 'auto' : 'hidden',
-  }"
-  (scrolledIndexChange)="onScrolledIndexChange($event)"
-  (scroll)="onViewportScroll($event)"
->
-  <ng-container *ngIf="gridData$ | async as gridData">
-    <div class="icc-grid-row" *cdkVirtualFor="let record of gridData; trackBy: trackByIndex; let index = index">
-      <ng-container *ngIf="rowGroups$ | async as rowGroups">
-
-    <div class="icc-grid-row" *cdkVirtualFor="let record of gridData; trackBy: trackByIndex; let index = index">
-      -->
+-->
