--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -63,7 +63,11 @@
             </ng-container>
 
             <ng-container *ngIf="fieldConfig.virtualScroll">
-              <cdk-virtual-scroll-viewport class="icc-select-virtual-scroll" [itemSize]="28">
+              <cdk-virtual-scroll-viewport
+                class="icc-select-virtual-scroll"
+                [itemSize]="28"
+                (scrolledIndexChange)="onScrolledIndexChange($event)"
+              >
                 <icc-option *cdkVirtualFor="let option of result" [value]="option" #ref (click)="clickOption(ref)">
                   <icc-checkbox *ngIf="fieldConfig.multiSelection" [checked]="ref.selected">
                     <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
