view port and click trigger

--- a/projects/icc/theme/src/core/_typography.scss
+++ b/projects/icc/theme/src/core/_typography.scss
@@ -27,6 +27,7 @@ icc-layout,
     .cdk-overlay-pane {
       display: block;
       height: auto;
+      //min-height: 320px; // select drop down height 320px
     }
   }
 }
