select sticky header

--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -45,6 +45,23 @@
         [compareWith]="compareFn.bind(this)"
       >
         <ng-template iccAutocompleteContent>
+          <div *ngIf="fieldConfig.multiSelection" class="icc-select-field-sticky-header">
+            <icc-option>
+              <icc-checkbox>
+                {{ "CHECK_ALL" | translate }}
+              </icc-checkbox>
+            </icc-option>
+            <icc-option>
+              <icc-checkbox>
+                {{ "UNCHECK_ALL" | translate }}
+              </icc-checkbox>
+            </icc-option>
+            <icc-option>
+              <icc-checkbox>
+                {{ "IS_EMPTY" | translate }}
+              </icc-checkbox>
+            </icc-option>
+          </div>
           <ng-container *ngIf="selectOptions | filter: selectedField.value : fieldConfig.optionLabel as result">
             <ng-container *ngIf="!fieldConfig.virtualScroll">
               <icc-option *ngFor="let option of result" [value]="option" #ref>
@@ -93,3 +110,32 @@
     </icc-form-field>
   </ng-container>
 </ng-container>
+
+<!--
+    <sun-option *ngIf="column.showCheckAll && column.filterMultiSelect"
+      class="sun-select-filter-option-divider"
+      [value]="selectFilterValue.CHECK_ALL">
+      <sun-checkbox class="sun-select-filter-checkbox" [checked]="isAllChecked" ghost>
+        {{ 'COMMON.LABEL.CHECK_ALL' | translate }}
+      </sun-checkbox>
+      <div class="sun-dropdown-divider" *ngIf="!column.showUncheckAll && !column.showIsEmpty"></div>
+    </sun-option>
+
+    <sun-option *ngIf="column.showUncheckAll && column.filterMultiSelect"
+      class="sun-select-filter-option-divider"
+      [value]="selectFilterValue.UNCHECK_ALL">
+      <sun-checkbox class="sun-select-filter-checkbox" [checked]="value && value.length ===0" ghost>
+        {{ 'COMMON.LABEL.UNCHECK_ALL' | translate }}
+      </sun-checkbox>
+      <div class="sun-dropdown-divider" *ngIf="!column.showIsEmpty"></div>
+    </sun-option>
+
+    <sun-option *ngIf="column.showIsEmpty && column.filterMultiSelect"
+      class="sun-select-filter-option-divider"
+      [value]="selectFilterValue.IS_EMPTY" #refIsEmpty>
+      <sun-checkbox class="sun-select-filter-checkbox" [checked]="isChecked(refIsEmpty)" ghost>
+        {{ 'GRID.IS_EMPTY' | translate }}
+      </sun-checkbox>
+      <div class="sun-dropdown-divider" *ngIf="column.showCheckAll || column.showUncheckAll"></div>
+    </sun-option>
+-->
