--- a/projects/icc/fields/src/select-field/select-field.component.scss
+++ b/projects/icc/fields/src/select-field/select-field.component.scss
@@ -2,6 +2,12 @@
   width: 100%;
 }
 
+.icc-select-field-sticky-header {
+  position: sticky;
+  top: 0;
+  z-index: 1001;
+}
+
 .icc-select-virtual-scroll {
   display: flex;
   flex: 1 1 320px;
