--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -46,13 +46,13 @@
       >
         <ng-template iccAutocompleteContent>
           <div *ngIf="fieldConfig.multiSelection" class="icc-select-field-sticky-header">
-            <icc-option>
+            <icc-option (click)="checkAll(true)">
               <icc-checkbox>
                 {{ "CHECK_ALL" | translate }}
               </icc-checkbox>
             </icc-option>
-            <icc-option>
-              <icc-checkbox>
+            <icc-option (click)="checkAll(false)">
+              <icc-checkbox [checked]="!hasValue">
                 {{ "UNCHECK_ALL" | translate }}
               </icc-checkbox>
             </icc-option>
