--- a/projects/icc-demo/src/app/views/select/demos/simple-select/simple-select.component.html
+++ b/projects/icc-demo/src/app/views/select/demos/simple-select/simple-select.component.html
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<div>
+<div class="right-panel">
   <div><br /></div>
   <div>
     Local field config and local list options (non-object)
