--- a/projects/icc/option/src/option.component.scss
+++ b/projects/icc/option/src/option.component.scss
@@ -1,6 +1,7 @@
 :host {
   display: flex;
   height: 28px;
-  padding: 0.25rem 0.625rem;
+  align-items: center;
+  padding: 0 0.625rem;
   white-space: nowrap;
 }
